--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,22 @@
   		<div class="row">
     		<ul class='nav nav-tabs'>
     		<li role="presentation" class= "pull-left">
-    			<%= link_to "Posts", posts_path %>
+    			<%= link_to "Posts", posts_path, class: "btn btn-warning" %>
     		</li>
     		<li role="presentation" class= "pull-left">
-    			<%= link_to "New Post", new_post_path %>
+    			<%= link_to "New Post", new_post_path, class: "btn btn-success" %>
     		</li>
          <li role="presentation" class="pull-right">
           <% if user_signed_in? %>
            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %></li>
           <li role="presentation" class="pull-right">
          <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary" %>
+         <li role= "presentation" class="pull-right">
+        <%= image_tag current_user.avatar.url, class: 'img-responsive', height: '30px', width: '30px'%></li>
           <% end %>
     		</li>
         </ul>
       </div>
-
 
  	    <div class="row">
    		 <%= yield %>
