--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -20,6 +20,11 @@
   <div class="actions">
     <%= f.submit "Change my password" %>
   </div>
+
+  <div class="form-group">
+    <strong>Upload a Profile Pic:</strong>
+    <%= f.file_field :avatar %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
