--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,6 +11,11 @@
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
+
+  <div class="form-group">
+    <strong>Upload a Profile Pic:</strong>
+    <%= f.file_field :avatar %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
