edit with background image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,7 @@
     		</li>
         </ul>
       </div>
-
- 	    <div class="row">
+ 	    <div class="row content">
    		 <%= yield %>
       </div>
     </div> 
