--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="panel panel-default">
+<div class="panel-heading">
 <h1>Editing Comment</h1>
+</div>
+<div class="panel-body">
 
 <%= render 'form', comment: @comment %>
 
-<%= link_to 'Show', @comment %> |
 <%= link_to 'Back', comments_path %>
+</div>
+</div>
