--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,17 +12,16 @@
   <% end %>
 
 
-  <div class="form-group">
-    <%= form.label :comment_entry %>
-    <%= form.text_area :comment_entry, id: :comment_comment_entry %>
-  </div>
-
   <div class= "form-group">
   <%= form.hidden_field :post_id, value: @post.id %>
   <%= form.hidden_field :user_id, value: current_user.id %>
   </div>
 
   <div class="form-group">
-    <%= form.submit "Submit", class: "btn btn-primary"%>
+    <%= form.text_area :comment_entry, placeholder: "Tell Me Something...", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+      <%= form.submit "Submit", class: "btn btn-primary"%>
   </div>
 <% end %>
