--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,7 +10,22 @@
       </ul>
     </div>
   <% end %>
+<div class="form-group">
+    <%= form.text_field :title, placeholder: "Blog Entry Title", class: "form-control" %>
+  </div>
 
+  <div class="form-group">
+    <%= form.text_area :blog_entry, placeholder: "Tell Us Something...", class: "form-control" %>
+  </div>
+  
+  <%= form.hidden_field :user_id, value: current_user.id %>
+
+  <div class="actions">
+    <%= form.submit "Submit", class: "btn btn-primary" %>
+  </div>
+<% end %>
+
+  <% if false %>
   <div class="form-group">
     <%= form.label :title %>
     <%= form.text_field :title, id: :post_title, class: 'form-control' %>
