--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="panel panel-default">
+<div class="panel-heading">
 <h1>Editing Post</h1>
+</div>
+<div class="panel-body">
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
 <%= link_to 'Back', posts_path %>
+</div>
+</div>
