--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
-
+<div class="panel panel-default">
+<div class="panel-heading"><h1>Posts</h1></div>
+<div class="panel-body">
 <table class= "table">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>User</th>
-      <th>Blog entry</th>
-      <th colspan="3"></th>
+      <th><h3>Title</h3></th>
+      <th><h3>Blog entry</h3></th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.title %></td>
-        <td><%= post.user.username %></td>
+        <td><h4><%= post.title %></h4>
+        <!--we havent set up the database to save users so we cant look at each profile<p>by <em><%= link_to post.user.username, user_posts_path(name: post.user.username) %></em></p>--></td>
         <td><%= post.blog_entry %></td>
         <td><%= link_to 'Show', post, {class: 'btn btn-info'} %></td> 
         <td><%= link_to 'Edit', edit_post_path(post), {class: 'btn btn-warning'} %></td> 
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?'}, class: "btn btn-danger" %></td>
       </tr>
+      
     <% end %>
+
+    <%= paginate @posts %>
   </tbody>
+
 </table>
+</div>
+</div>
 
