--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,11 @@
+<div class="panel panel-default">
+<div class="panel-heading">
 <h1>New Post</h1>
+</div>
+<div class="panel-body">
 
 <%= render 'form', post: @post %>
 
 <%= link_to 'Back', posts_path %>
+</div>
+</div>
